// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`babel/try/1tbs > nested try > practical 1`] = `
"try {
  try {
    throw new Error("oops");
  } finally {
    console.log("finally");
  }
} catch (ex) {
  console.error("outer", ex.message);
}
"
`;

exports[`babel/try/1tbs > try...catch > practical 1`] = `
"try {
  throw new TypeError("oops");
} catch ({ name, message }) {
  console.log(name);
  console.log(message);
}
"
`;

exports[`babel/try/1tbs > try...catch...finally > practical 1`] = `
"try {
  throw new Error("oops");
} catch (ex) {
  console.error(ex.message);
} finally {
  console.log("finally");
}
"
`;

exports[`babel/try/1tbs > try...finally > practical 1`] = `
"openMyFile();
try {
  writeMyFile(theData);
} finally {
  closeMyFile();
}
"
`;
